--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap')
+*
+    margin: 0
+    padding: 0
+    font-family: 'Source Sans Pro', sans-serif
+
+body,html
+    height: 100%
+li
+    list-style: none
+
+body
+    font-family: 'Roboto', sans-serif
+    font-size: 14px
+    color: #000
+    background-color: #fff
+a
+    text-decoration: none
+
+li
+    list-style: none
+.content-top-panel
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 24px
+    .page-title
+        font-weight: 600
+        font-size: 28px
+        line-height: 36px
+        color: #90a0b7
+        margin: 0
