Feature: products styling  [ref:no-ref]

--- a/src/app/content/sidebar/sidebar.component.html
+++ b/src/app/content/sidebar/sidebar.component.html
@@ -4,14 +4,14 @@
   </h2>
   <ul class="sidebar-nav">
     <li>
-      <i class="icon-dashboard"></i>
-      <a
+      <!-- <mat-icon>dashboard</mat-icon> -->
+      <!-- <a
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
         [routerLink]="['./']"
-      >
-        <span class="sidebar-nav-text"> Dashboard</span>
-      </a>
+      > -->
+      <span class="sidebar-nav-text"> Dashboard</span>
+      <!-- </a> -->
     </li>
     <li>
       <a
@@ -23,29 +23,22 @@
       </a>
     </li>
     <li>
-      <a
+      <!-- <a
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
         [routerLink]="['categories']"
-      >
-        <span class="sidebar-nav-text">Categories</span>
-      </a>
+      > -->
+      <span class="sidebar-nav-text">Categories</span>
+      <!-- </a> -->
     </li>
     <li>
-      <a
+      <!-- <a
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
         [routerLink]="['sales']"
-      >
-        <span class="sidebar-nav-text">Sales</span>
-      </a>
+      > -->
+      <span class="sidebar-nav-text">Sales</span>
+      <!-- </a> -->
     </li>
   </ul>
-
-  <!-- <mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile>1</mat-grid-tile>
-    <mat-grid-tile>2</mat-grid-tile>
-    <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
-  </mat-grid-list> -->
 </div>
