--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap')
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
 *
     margin: 0
     padding: 0
@@ -31,3 +32,33 @@ li
         line-height: 36px
         color: #90a0b7
         margin: 0
+.btn
+    height: 38px
+    outline: none
+    font-weight: 600
+    font-size: 16px
+    line-height: 24px
+    padding: 6px 34px
+    border: 1px solid #109cf1
+    border-radius: 4px
+    cursor: pointer
+    transition: 0.2s all
+    text-decoration: none
+    color: #fff
+    background-color: #109cf1
+    box-shadow: 0 4px 10px rgba(16, 156, 241, 0.24)
+.btn-inv
+    height: 38px
+    outline: none
+    font-weight: 600
+    font-size: 16px
+    line-height: 24px
+    padding: 6px 34px
+    border: 1px solid #109cf1
+    border-radius: 4px
+    cursor: pointer
+    -webkit-transition: 0.2s all
+    transition: 0.2s all
+    text-decoration: none
+    color: #109cf1
+    background-color: #fff
