--- a/src/styles.sass
+++ b/src/styles.sass
@@ -62,3 +62,24 @@ li
     text-decoration: none
     color: #109cf1
     background-color: #fff
+    &[disabled]
+        background: #f8f8f8
+        cursor: default
+        opacity: .5
+.td.mat-cell
+    td.mat-footer-cell
+        border-bottom-color: #c2cfe0!important
+.mat-header-cell
+    color: #323c47!important
+    font-size: 16px!important
+    padding-left: 5px!important
+.mat-column-controls
+    width: 35px!important
+td
+    &.mat-cell
+        &:last-of-type
+            padding-right: 0!important
+.mat-column-name
+    padding-left: 25px!important
+.mat-cell
+    color: #323c47!important
