--- a/src/app/content/products/products.component.sass
+++ b/src/app/content/products/products.component.sass
@@ -1,6 +1,6 @@
 .products
-    // display: flex
-    // flex-direction: column
+    display: flex
+    flex-direction: column
     height: 100%
 .content-top-panel
     display: flex
@@ -9,8 +9,9 @@
     align-items: center
 table
     &.mat-table
-        width: 90%
+        width: 100%
         margin: 0 auto
 .btn-edit
     font-size: 18px
     cursor: pointer
+    margin: 0 auto
