Feature: create category[ref: no-ref]

--- a/src/app/content/products/products-dialog/products-dialog.component.html
+++ b/src/app/content/products/products-dialog/products-dialog.component.html
@@ -18,6 +18,7 @@
     ></textarea>
     <label class="product-form-label">Price</label>
     <input
+      min="1"
       formControlName="price"
       class="product-form-input"
       type="number"
