--- a/src/app/content/modal/modal.component.sass
+++ b/src/app/content/modal/modal.component.sass
@@ -6,7 +6,7 @@
     z-index: 999
     width: 100%
     height: 100%
-    overflow: auto
+    overflow: hidden
     background-color: rgba(0, 0, 0, 0.4)
     &.open
         display: block
