--- a/src/styles.sass
+++ b/src/styles.sass
@@ -81,5 +81,8 @@ td
             padding-right: 0!important
 .mat-column-name
     padding-left: 25px!important
+.mat-column-status
+    width: 70px!important
+
 .mat-cell
     color: #323c47!important
