--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,9 +7,22 @@
         width: 256px
         height: 100vh
         box-sizing: border-box
+
     .content
         width: calc( 100% - 256px)
         height: 100vh
         background-color: #f5f6f8
         padding: 24px 36px
+        box-sizing: border-box
+    .sidebar-open
+        width: 70px
+        height: 100vh
+        box-sizing: border-box
+        overflow: hidden
+    .sidebar-open-content
+        width: calc( 100% - 70px)
+        height: 100vh
+        background-color: #f5f6f8
+        padding: 24px 19px
+        margin-right: 20px
         box-sizing: border-box
