--- a/src/app/content/categories/categories-dialog/categories-dialog.component.sass
+++ b/src/app/content/categories/categories-dialog/categories-dialog.component.sass
@@ -10,7 +10,7 @@
     border-radius: 10px
     box-sizing: border-box
     width: 600px
-    .product-form
+    .category-form
         width: 90%
         display: flex
         flex-direction: column
@@ -53,26 +53,13 @@
             outline: none
             margin-bottom: 15px
 
-        &-select
-            width: 105%
-            background-color: #fff
-            border: 1px solid #c2cfe0
-            border-radius: 4px
-            padding: 8px 12px
-            font-weight: 400
-            font-size: 16px
-            line-height: 20px
-            color: #334d6e
-            outline: none
-            height: 38px
-            margin-bottom: 15px
-
-    .btnWrapp
-        display: flex
-        flex-direction: row
-        justify-content: space-between
-        align-item: center
-        width: 70%
+.btnWrapp
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-item: center
+    width: 70%
+    margin: 0 auto
 .valid-form
     color: #ce4040
     position: absolute
