--- a/src/app/content/products/products.component.html
+++ b/src/app/content/products/products.component.html
@@ -4,14 +4,9 @@
     <button class="btn" (click)="editProduct()">Add product</button>
   </div>
 
-  <div class="products-control">
-    <!-- <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" />
-    </mat-form-field> -->
-  </div>
+  <div class="products-control"></div>
   <div class="products-table">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <!-- <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
@@ -24,26 +19,68 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
         <td mat-cell *matCellDef="let element">{{ element.price }}</td>
       </ng-container>
-
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let element">{{ element.status }}</td>
       </ng-container>
-
       <ng-container matColumnDef="controls">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
         <td mat-cell *matCellDef="let element">
           <mat-icon class="btn-edit" (click)="editProduct(element)"
-            >edit</mat-icon
-          >
+            >edit</mat-icon          >
           <mat-icon class="btn-edit" (click)="deleteProduct(element)"
-            >delete</mat-icon
-          >
+            >delete</mat-icon          >
         </td>
       </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    </table> -->
+
+    <div class="headers-row">
+      <div class="table-field-name">
+        Name
+      </div>
+      <div class="table-field-description header">
+        Description
+      </div>
+      <div class="table-field-price header">
+        Price
+      </div>
+      <div class="table-field-status header">
+        Status
+      </div>
+      <div class="table-field-category header">
+        Category
+      </div>
+      <div class="table-field-controls"></div>
+    </div>
+
+    <div *ngFor="let product of products" class="table">
+      <div class="table-row">
+        <div class="table-field-name">
+          {{ product.name }}
+        </div>
+        <div class="table-field-description">
+          {{ product.description }}
+        </div>
+        <div class="table-field-price">
+          {{ product.price }}
+        </div>
+        <div class="table-field-status">
+          {{ product.status }}
+        </div>
+        <div class="table-field-category">
+          <!-- {{ product.category }} -->11111
+        </div>
+        <div class="table-field-controls">
+          <mat-icon class="btn-edit" (click)="editProduct(product)"
+            >edit</mat-icon
+          >
+          <mat-icon class="btn-edit" (click)="deleteProduct(product)"
+            >delete</mat-icon
+          >
+        </div>
+      </div>
+    </div>
   </div>
 </div>
