--- a/src/app/content/products/products.component.sass
+++ b/src/app/content/products/products.component.sass
@@ -2,15 +2,63 @@
     display: flex
     flex-direction: column
     height: 100%
+    &-table
+        background-color: #fff
+        max-width: 100%
+        border-radius: 4px
+        margin-bottom: 40px
+
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.14)
+
+.table
+    &-field-name
+        width: 15%
+    &-field-description
+        width: 30%
+    &-field-price
+        width: 10%
+    &-field-status
+        width: 10%
+    &-field-category
+        width: 25%
+    &-field-conrtols
+        width: 10%
+.header
+    margin-left: -52px
 .content-top-panel
     display: flex
     flex-direction: row
     justify-content: space-between
     align-items: center
-table
-    &.mat-table
-        width: 100%
-        margin: 0 auto
+.headers-row
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    padding: 16px
+    font-size: 16px
+    line-height: 20px
+    color: #90a0b7
+    display: flex
+    align-items: center
+    border-bottom: 1px solid #c2cfe0
+.table
+    width: 100%
+    margin: 0 auto
+
+    .table-row
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        padding: 16px
+        font-size: 16px
+        line-height: 20px
+        color: #323c47
+        display: flex
+        align-items: center
+        border-bottom: 1px solid #c2cfe0
+
 .btn-edit
     font-size: 18px
     cursor: pointer
