resolve merge conflicts [ref:no-ref]

--- a/src/app/content/categories/categories.component.html
+++ b/src/app/content/categories/categories.component.html
@@ -32,7 +32,7 @@
         {{ category.name }}
       </div>
       <div class="table-field-controls">
-        <mat-icon class="btn-edit" (click)="addSubcategory(category)"
+        <mat-icon class="btn-edit" (click)="editCategory(category)"
           >add</mat-icon
         >
         <mat-icon class="btn-edit" (click)="editCategory(category)"
