--- a/src/app/content/products/products-dialog/products-dialog.component.html
+++ b/src/app/content/products/products-dialog/products-dialog.component.html
@@ -20,7 +20,7 @@
     <label class="product-form-label">Description</label>
     <textarea
       formControlName="description"
-      class="product-form-input"
+      class="product-form-input textarea"
       type="text"
       placeholder="Description"
     ></textarea>
