--- a/src/app/content/products/products.component.sass
+++ b/src/app/content/products/products.component.sass
@@ -11,18 +11,26 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.14)
 
 .table
+    &-field-image
+        width: 50px
     &-field-name
         width: 15%
     &-field-description
         width: 30%
     &-field-price
-        width: 10%
+        width: 100px
     &-field-status
-        width: 10%
+        width: 100px
     &-field-category
-        width: 25%
+        width: 100px
     &-field-conrtols
-        width: 10%
+        width: 50px
+.table-img
+    height: 40px
+    max-width: 100%
+    padding: 4px
+    border: 1px solid #c2cfe0
+    border-radius: 2px
 .header
     margin-left: -52px
 .content-top-panel
