--- a/src/app/content/categories/categories.component.html
+++ b/src/app/content/categories/categories.component.html
@@ -5,31 +5,27 @@
   </div>
 
   <div class="categories-control"></div>
-  <!-- <div class="categories-table">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="controls">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon class="btn-edit" (click)="editCategory(element)"
-            >add</mat-icon          >
-          <mat-icon class="btn-edit" (click)="editCategory(element)"
-            >edit</mat-icon          >
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div> -->
 
   <div *ngFor="let category of categories" class="table">
     <div class="table-wrapp" [ngClass]="{ 'table-wrapp-open': isOpen }">
-      <!-- *ngFor="let subcategory of subcategories" -->
       <div class="table-field-name">
-        {{ category.name }}
+        <!-- *ngFor="let subcategory of subcategories" -->
+        <span>{{ category.name }}</span>
+        <!-- <div class="subcategory">{{ subcategory.name }}</div> -->
+        <!-- <div class="hidden-list">
+          <div class="hidden-item">
+            <span>1111</span>
+            <span>10 products</span>
+          </div>
+          <div class="hidden-item">
+            <span>1111</span>
+            <span>10 products</span>
+          </div>
+          <div class="hidden-item">
+            <span>1111</span>
+            <span>10 products</span>
+          </div>
+        </div> -->
       </div>
       <div class="table-field-controls">
         <mat-icon class="btn-edit" (click)="editCategory(category)"
@@ -39,8 +35,6 @@
           >edit</mat-icon
         >
       </div>
-
-      <!-- <div class="subcategory">{{ subcategory.name }}</div> -->
     </div>
   </div>
 </div>
