--- a/src/app/content/categories/categories.component.sass
+++ b/src/app/content/categories/categories.component.sass
@@ -2,6 +2,11 @@
     display: flex
     flex-direction: column
     height: 100%
+    &-control
+        background-color: #fff
+        padding: 16px 32px
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06)
+        margin-bottom: 24px
 .content-top-panel
     display: flex
     flex-direction: row
@@ -30,7 +35,7 @@
             border: 6px solid transparent
             border-left: 6px solid #ccc
             position: absolute
-            top: 50%
+            top: 25px
             left: 19px
             margin-top: -6px
             transition: 0.3s all ease
@@ -42,3 +47,23 @@
     font-size: 18px
     cursor: pointer
     margin: 0 auto
+.table-field-name
+    width: 100%
+.hidden-list
+    width: 100%
+.hidden-item
+    margin: 12px 0
+    padding: 12px 16px
+    background-color: #fff
+    list-style: none
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.14)
+    border-radius: 4px
+    position: relative
+.table-field-controls
+    position: absolute
+    top: 13px
+    right: 19px
