--- a/src/app/content/products/products-dialog/products-dialog.component.sass
+++ b/src/app/content/products/products-dialog/products-dialog.component.sass
@@ -73,6 +73,10 @@
         justify-content: space-between
         align-item: center
         width: 70%
+        margin-bottom: 15px
+.textarea
+    resize: none
+    min-height: 110px
 .valid-form
     color: #ce4040
     position: absolute
