--- a/src/app/content/products/products.component.html
+++ b/src/app/content/products/products.component.html
@@ -6,38 +6,11 @@
 
   <div class="products-control"></div>
   <div class="products-table">
-    <!-- <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-      </ng-container>
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-      </ng-container>
-      <ng-container matColumnDef="controls">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon class="btn-edit" (click)="editProduct(element)"
-            >edit</mat-icon          >
-          <mat-icon class="btn-edit" (click)="deleteProduct(element)"
-            >delete</mat-icon          >
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table> -->
-
     <div class="headers-row">
-      <div class="table-field-name">
+      <div class="table-field-image">
+        Image
+      </div>
+      <div class="table-field-name header ">
         Name
       </div>
       <div class="table-field-description header">
@@ -57,6 +30,9 @@
 
     <div *ngFor="let product of products" class="table">
       <div class="table-row">
+        <div class="table-field-img">
+          <img class="table-img" src="{{ product.images[0]?.url }}" alt="img" />
+        </div>
         <div class="table-field-name">
           {{ product.name }}
         </div>
