--- a/src/app/content/sidebar/sidebar.component.html
+++ b/src/app/content/sidebar/sidebar.component.html
@@ -46,7 +46,8 @@
 
     <li class="toggle">
       <button class="toggle-sidebar" (click)="sidebarClick()">
-        Toggle sidebar
+        <mat-icon class="icon-menu">call_to_action</mat-icon>
+        <span>Toggle sidebar</span>
       </button>
     </li>
   </ul>
