--- a/src/app/content/sidebar/sidebar.component.html
+++ b/src/app/content/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div>
   <h2 class="sidebar-title">
     <a class="sidebar-title-link" href="#">SHOP ADMIN</a>
   </h2>
@@ -45,7 +45,7 @@
     </li>
 
     <li class="toggle">
-      <button class="toggle-sidebar" (click)="sidebarClick()">
+      <button class="toggle-sidebar sidebar__toggler" (click)="sidebarClick()">
         <mat-icon class="icon-menu">call_to_action</mat-icon>
         <span>Toggle sidebar</span>
       </button>
