--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -14,7 +14,8 @@
     .content
         margin-left: 256px
         width: calc( 100% - 256px)
-        height: 100vh
+        // height: 100%
+        padding-bottom: 200px
         background-color: #f5f6f8
         padding: 24px 36px
         box-sizing: border-box
