--- a/src/app/content/categories/sub-categories-dialog /sub-categories-dialog.component.sass
+++ b/src/app/content/categories/sub-categories-dialog /sub-categories-dialog.component.sass
@@ -6,11 +6,11 @@
     position: relative
     border-radius: 10px
     text-align: center
-    padding: 20px 20px 10px 10px
+    padding: 20px 30px 10px 10px
     border-radius: 10px
     box-sizing: border-box
     width: 600px
-    .product-form
+    .sub-category-form
         width: 90%
         display: flex
         flex-direction: column
@@ -41,7 +41,7 @@
                 height: 5px
                 color: #ce4040
         &-input
-            width: 105%
+            width: 100%
             background-color: #fff
             border: 1px solid #c2cfe0
             border-radius: 4px
@@ -53,30 +53,13 @@
             outline: none
             margin-bottom: 15px
 
-        &-select
-            width: 105%
-            background-color: #fff
-            border: 1px solid #c2cfe0
-            border-radius: 4px
-            padding: 8px 12px
-            font-weight: 400
-            font-size: 16px
-            line-height: 20px
-            color: #334d6e
-            outline: none
-            height: 38px
-            margin-bottom: 15px
-
-    .btnWrapp
-        display: flex
-        flex-direction: row
-        justify-content: space-between
-        align-item: center
-        width: 70%
-        margin-bottom: 15px
-.textarea
-    resize: none
-    min-height: 110px
+.btnWrapp
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-item: center
+    width: 70%
+    margin: 0 auto
 .valid-form
     color: #ce4040
     position: absolute
